Fix whitespace issues on FAQ

--- a/src/app/components/Question/styles.styl
+++ b/src/app/components/Question/styles.styl
@@ -30,6 +30,7 @@
   margin-top: 0
   height: 0
   overflow: hidden
+  padding-bottom: .25em
   opacity: 0
   z-index: -1
   transition: height 250ms ease-in-out, opacity 250ms ease-in-out, margin-top 250ms ease-in-out
